--- a/renesas-bsp/ChangeLog
+++ b/renesas-bsp/ChangeLog
@@ -1,3 +1,11 @@
+* v6.1.83-2024-04-01
+
+	* Merge/Rebase v6.1.83
+
+	* update CVE
+
+	* update script/make-cve.sh
+
 * v6.1.82-2024-03-18
 
 	* Merge/Rebase v6.1.82
