--- a/renesas-bsp/ChangeLog
+++ b/renesas-bsp/ChangeLog
@@ -1,3 +1,11 @@
+* v6.1.86-2024-04-17
+
+	* update full/remain
+
+	* remove README / commit-bsp61x.sh
+
+	* rename README-for-BSP-team to README
+
 * v6.1.86-2024-04-16
 
 	* sync to rcar-5.2.0.rc17
