--- a/renesas-bsp/README
+++ b/renesas-bsp/README
@@ -47,16 +47,15 @@
 
 		(1) upstreamed, and included in LTS v6.1.X.
 		(2) upstreamed, and included in latest Linux kernel.
-		(3) handling, but not yet upstreamed.
+		(3) not yet upstreamed.
 		(4) ignored.
 
 	We did nothing (1) patches because it is already included on base
 	kernel (= LTS v6.1.X).
 	We backported (2) patches into this rebased BSP. Each commit has
 	"cherry picked from" tag.
-	We included (3) patches into this rebased BSP.
-	And, rebased BSP includes latest features from latest kernel which
-	was not included on previous BSP.
+	We are trying to upport (3) patches, thus it is not yet included.
+	you can see which one was so in "remains" file.
 
 	But, we ignored (4) patches, because these are..
 
@@ -72,7 +71,8 @@
 	Please see below
 
 		${LINUX}/renesas-bsp/comment : (1)/(2)/(3)
-		${LINUX}/renesas-bsp/handled : (1)/(2)/(3)
+		${LINUX}/renesas-bsp/handled : (1)/(2)
+		${LINUX}/renesas-bsp/remains : (3)
 		${LINUX}/renesas-bsp/ignored : (4)
 
 * About handled CVE
